infra/inventory-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-frontend
  labels:
    app: inventory-frontend
spec:
  selector:
    matchLabels:
      app: inventory-frontend
  template:
    metadata:
      labels:
        app: inventory-frontend
    spec:
      containers:
        - name: inventory-frontend
          image: inventory-frontend
          resources:
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-frontend
  labels:
    app: inventory-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: inventory-frontend
