infra/store-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
  labels:
    app: store-service
spec:
  selector:
    matchLabels:
      app: store-service
  template:
    metadata:
      labels:
        app: store-service
    spec:
      containers:
        - name: store-service
          image: store-service
          resources:
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-service
  labels:
    app: store-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: store-service
