infra/transport-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transport-service
  labels:
    app: transport-service
spec:
  selector:
    matchLabels:
      app: transport-service
  template:
    metadata:
      labels:
        app: transport-service
    spec:
      containers:
        - name: transport-service
          image: transport-service
          resources:
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: transport-service
  labels:
    app: transport-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: transport-service
